--- a/Onbooks_3Ds/Views/Homepage/Index.cshtml
+++ b/Onbooks_3Ds/Views/Homepage/Index.cshtml
@@ -246,7 +246,7 @@
                     <div class="content">
                         <h2 class="title">O Príncipe Cruel</h2>
                         <p class="copy">O primeiro livro da saga: O Povo do Ar</p>
-                        <a href="produto.html">
+                        <a asp-action="Produto" asp-controller="Homepage">
                             <button class="btn">Ver mais</button>
                         </a>
                     </div>
