--- a/Onbooks_3Ds/Views/Adm/Cadastro_de_Livros.cshtml
+++ b/Onbooks_3Ds/Views/Adm/Cadastro_de_Livros.cshtml
@@ -3,7 +3,8 @@
 *@
 @{
 }
-@model IEnumerable<Onbooks_3Ds.Models.Cadastrar_Acervo>
+@model  IEnumerable<Onbooks_3Ds.Models.Cadastrar_Acervo>
+ 
 <DOCTYPE html>
     <html lang="en">
     <head>
@@ -155,7 +156,7 @@
     </nav>
 <!-- form modal -->
 <div id="fullscreen-div"></div>
-<form asp-action="cadastrar_livro" asp-controller="Adm" method="post" enctype="multipart/form-data" class="modal" id="modal">
+<form asp-action="Cadastro_de_livros" asp-controller="Adm" method="post" enctype="multipart/form-data" class="modal" id="modal">
     <div class="modal-content">
         <div class="modal-head">
             <h3 id="modal-title">Cadastrar</h3>
@@ -167,28 +168,28 @@
             <div class="modal-row">
                 <div class="modal-col">
                     <label for="">Título</label>
-                    <input asp-for="Titulo" type="text" placeholder="Ex: Príncipe Cruel" class="form-control" name="addr_ing_name">
+                    <input name="titulo" type="text" placeholder="Ex: Príncipe Cruel" class="form-control" >
                 </div>
             </div>
 
             <div class="modal-row grid-row">
                 <div class="modal-col">
                     <label for="">ISBN</label>
-                    <input asp-for="Isbn" type="number" placeholder="" class="form-control" name="first_name">
+                    <input name="Isbn" asp- type="number" placeholder="" class="form-control">
                 </div>
                 <div class="modal-col">
                     <label for="">ISSN</label>
-                    <input asp-for="Issn" type="number" placeholder="" class="form-control" name="last_name">
+                    <input name="Issn" type="number" placeholder="" class="form-control" >
                 </div>
             </div>
             <div class="modal-row grid-row">
                 <div class="modal-col">
                     <label for="">Ano Publicação</label>
-                    <input asp-for="Ano_publicacao" type="number" placeholder="yyyy/mm/dd" class="form-control" name="first_name">
+                    <input name="Ano_publicacao" type="number" placeholder="yyyy/mm/dd" class="form-control" >
                 </div>
                 <div class="modal-col">
                     <label for="">Codigo Da Editora</label>
-                    <input asp-for="Editora" type="number" placeholder="Ex :(1)-Marvel" class="form-control" name="last_name">
+                    <input name="Editora" type="number" placeholder="Ex :(1)-Marvel" class="form-control" >
                 </div>
             </div>
 
@@ -199,7 +200,7 @@
                     <input type="file" accept="image/*" placeholder="" class="form-control" name="phone">
                 </div>
             </div>
-            <div class="modal-row" id="modal-btns">
+            <div class="modal-row" >
                 <button type="submit" id="save-btn">Cadastrar</button>
             </div>
         </div>
@@ -224,15 +225,49 @@
             <table class="addr-table">
                 <thead>
                     <tr>
+                        <th>Imagem</th>
                         <th>Título</th>
                         <th>ISBN</th>
                         <th>ISSN</th>
-                        <th>Imagem</th>
                         <th>Editora</th>
                         <th></th>
                         <th></th>
                     </tr>
                 </thead>
+                <tbody>
+                    @if (Model != null)
+                    {
+                        @foreach (var livro in Model)
+                        {
+                            string formatoimg = "data:image/jpeg;base64," + livro.Img;
+                            <tr>
+                                <td>
+                                    <img src="@formatoimg" width="200px" height="250px"></img>
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelitem => livro.Titulo)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelitem => livro.Isbn)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelitem => livro.Issn)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelitem => livro.Editora)
+                                </td>
+                                <td>
+                                </td>
+                                <td>
+                                </td>
+                            </tr>
+                        }
+                    }
+
+
+
+
+                </tbody>
 
             </table>
         </div>
