--- a/Onbooks_3Ds/Views/Homepage/Generos.cshtml
+++ b/Onbooks_3Ds/Views/Homepage/Generos.cshtml
@@ -12,6 +12,7 @@
 
 
     <!----======== CSS ======== -->
+    <link href="~/css/navbar.css" rel="stylesheet" />
     <link rel="stylesheet" href="~/css/jquery.modal.min.css" />
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
     <link rel="stylesheet" href="~/css/produtos.css">
