--- a/Onbooks_3Ds/Views/Adm/Emprestimus.cshtml
+++ b/Onbooks_3Ds/Views/Adm/Emprestimus.cshtml
@@ -69,7 +69,7 @@
                     </li>
 
                     <li class="nav-link">
-                        <a href="bibliotecaAdmin.html">
+                        <a asp-controller="Adm" asp-action="Acervo_Biblioteca">
                             <i class='bx bx-library icon'></i>
                             <span class="text nav-text">Bibliotecas</span>
                         </a>
@@ -77,7 +77,6 @@
 
                     <li class="nav-link">
                         <a asp-controller="Adm" asp-action="Cadastro_de_livros">
-
                             <i class='bx bx-edit icon'></i>
                             <span class="text nav-text">Cadastro de Livro</span>
 
@@ -94,7 +93,7 @@
                     </li>
 
                     <li class="nav-link">
-                        <a asp-controller="Adm" asp-action="Emprestimos">
+                        <a asp-controller="Adm" asp-action="Emprestimus">
                             <i class='bx bx-transfer-alt icon'></i>
                             <span class="text nav-text">Empréstimos</span>
 
