--- a/Onbooks_3Ds/Views/Homepage/Index.cshtml
+++ b/Onbooks_3Ds/Views/Homepage/Index.cshtml
@@ -97,7 +97,7 @@
     <nav class="sidebar close">
         <header>
             <div class="image-text">
-                <a href="index.html">
+                <a asp-controller="Homepage" asp-action="index">
                     <span class="image">
                         <img src="~/img/yett.png" alt="">
                     </span>
@@ -124,27 +124,21 @@
 
                 <ul class="menu-links">
                     <li class="nav-link">
-                        <a href="#">
-                            <i class='bx bx-user icon'></i>
-                            <span class="text nav-text">@TempData["email"]</span>
-                        </a>
-                    </li>
-                    <li class="nav-link">
-                        <a href="#">
+                        <a asp-controller="Homepage" asp-action="index">
                             <i class='bx bx-home-alt icon'></i>
                             <span class="text nav-text">Home</span>
                         </a>
                     </li>
 
                     <li class="nav-link">
-                        <a href="bibliotecas.html">
+                        <a asp-controller="Homepage" asp-action="Biblioteca">
                             <i class='bx bx-book icon'></i>
                             <span class="text nav-text">Bibliotecas</span>
                         </a>
                     </li>
 
                     <li class="nav-link">
-                        <a href="delivery.html">
+                        <a asp-controller="Homepage" asp-action="Delivery">
 
                             <i class='bx bx-bell icon'></i>
                             <span class="text nav-text">Delivery</span>
@@ -153,7 +147,7 @@
                     </li>
 
                     <li class="nav-link">
-                        <a href="loginADM.html">
+                        <a asp-controller="Adm" asp-action="Signs">
                             <i class='bx bx-key icon'></i>
                             <span class="text nav-text">Administrador</span>
 
@@ -162,21 +156,21 @@
                     </li>
 
                     <li class="nav-link">
-                        <a href="#">
+                        <a asp-controller="Homepage" asp-action="index">
                             <i class='bx bx-book-bookmark icon'></i>
                             <span class="text nav-text">Aluguéis</span>
 
                         </a>
                     </li>
                     <li class="nav-link">
-                        <a href="#ex1" rel="modal:open">
+                        <a asp-controller="Homepage" asp-action="index" >
                             <i class='bx bx-news icon'></i>
                             <span class="text nav-text">Novidades</span>
                         </a>
                     </li>
 
                     <li class="nav-link">
-                        <a href="#ex2" rel="modal:open">
+                        <a asp-controller="Homepage" asp-action="Generos" rel="modal:open">
                             <i class='bx bx-book-open icon'></i>
                             <span class="text nav-text">Gêneros</span>
 
@@ -184,9 +178,9 @@
                     </li>
 
                     </li class="nav-link">
-                    <a href="index.html"></a>
+                    <a asp-controller="Homepage" asp-action="index"></a>
                     <span class="text nav-text">
-                        <img class="sideimg" src="_img/9090.png" alt="">
+                        <img class="sideimg" src="~/img/9090.png" alt="">
                     </span>
                     </a>
                     </li>
@@ -194,28 +188,30 @@
 
 
             </div>
+
             <div class="bottom-content">
-                @if (Context.Session.GetString("user") == null) {
-                
+
+                @if (Context.Session.GetString("user") == null)
+                {
+
                     <li class="">
-            
-            <a asp-controller="Homepage" asp-action="Login_Cadastro">
-                <i class='bx bx-log-in icon'></i>
-                <span class="text nav-text">Login</span>
-            </a>
-        </li>
 
-    } else {
-        <li class="nav-bottom">
-            <a asp-controller="Homepage" asp-action="Sair">
-                <i class='bx bx-log-out icon'></i>
-                <span class="text nav-text">Logout</span>
-            </a>
-        </li>
-    }
+                        <a asp-controller="Homepage" asp-action="Login_Cadastro">
+                            <i class='bx bx-log-in icon'></i>
+                            <span class="text nav-text">Login</span>
+                        </a>
+                    </li>
 
-
-
+                }
+                else
+                {
+                    <li class="nav-bottom">
+                        <a asp-controller="Adm" asp-action="Sair">
+                            <i class='bx bx-log-out icon'></i>
+                            <span class="text nav-text">Logout</span>
+                        </a>
+                    </li>
+                }
 
                 <li class="mode">
                     <div class="sun-moon">
