--- a/Onbooks_3Ds/Views/Homepage/Index.cshtml
+++ b/Onbooks_3Ds/Views/Homepage/Index.cshtml
@@ -206,7 +206,7 @@
                 else
                 {
                     <li class="nav-bottom">
-                        <a asp-controller="Adm" asp-action="Sair">
+                        <a asp-controller="Homepage" asp-action="Sair">
                             <i class='bx bx-log-out icon'></i>
                             <span class="text nav-text">Logout</span>
                         </a>
