--- a/Onbooks_3Ds/Views/Adm/Acervo_Biblioteca.cshtml
+++ b/Onbooks_3Ds/Views/Adm/Acervo_Biblioteca.cshtml
@@ -20,8 +20,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.css" />
 
 
+    <link rel="stylesheet" href="~/css/cadastLivros.css">
     <link rel="stylesheet" href="~/css/bibliotecaAdmin.css">
     <link rel="stylesheet" href="~/css/navbar.css">
     <!-- font awesome icons -->
@@ -32,6 +34,7 @@
 </head>
 
 <body>
+    
     <nav class="sidebar close">
         <header>
             <div class="image-text">
@@ -157,7 +160,37 @@
 
     </nav>
 
-
+<div id="fullscreen-div"></div>
+    <form asp-action="Acervo_Biblioteca" asp-controller="Adm" method="post" class="modal" id="modal">
+        <div class="modal-content">
+            <div class="modal-head">
+                <h3 id="modal-title">Cadastrar</h3>
+                <button type="button" id="close-btn">
+                    <i class="fas fa-times"></i>
+                </button>
+            </div>
+            <div class="modal-main">
+                <div class="modal-row grid-row">
+                    <div class="modal-col">
+                        <label for="">Data que Foi adiquirido</label>
+                        <input name="data_aqui" type="number" placeholder="yyyy/mm/dd" class="form-control">
+                    </div>
+                    <div class="modal-col">
+                        <label for="">Codigo Da Obra</label>
+                        <input name="id_obra" type="number" placeholder="Ex :2 -livro x" class="form-control">
+                    </div>
+                </div>
+                <div class="modal-col">
+                    <label for="">Codigo Da Biblioteca</label>
+                    <input name="id_biblioteca" type="number" placeholder="Ex :509-SENAI Prof. Dr. Euryclides de Jesus Zerbini" class="form-control">
+                </div>
+            </div>
+                <div class="modal-col">
+                    <button type="submit" id="save-btn">Cadastrar</button>
+                </div>
+            </div>
+        </div>
+    </form>
 
 
     <!-- address book home -->
@@ -168,7 +201,11 @@
                 <h2>OnBooks</h2>
             </div>
 
-
+            <div class="addr-book-top">
+                <button type="button" class="btn" id="add-btn">
+                    <span><i class="fas fa-plus"></i> Cadastrar Acervo</span>
+                </button>
+            </div>
 
             <div class="addr-book-list" id="addr-book-list">
                 <table class="addr-table">
@@ -188,7 +225,7 @@
                             string formatoimg = "data:image/jpeg;base64," + item.Image;
                             <tr>
                                 <td>
-                                    <img src="@formatoimg" width="200px" height="250px"></img>
+                                    <img src="@formatoimg" width="150px" height="200px"></img>
                                 </td>
                                 <td>
                                     @Html.DisplayFor(modelitem => item.Id)
@@ -214,8 +251,8 @@
     <!-- end of address book home -->
 
 
-
-
+    
+    <script src="~/js/cadastLivros.js"></script>
     <script src="~/js/nav.js"></script>
 
 </body>
