--- a/Onbooks_3Ds/Views/Adm/Acervo_Biblioteca.cshtml
+++ b/Onbooks_3Ds/Views/Adm/Acervo_Biblioteca.cshtml
@@ -227,7 +227,7 @@
                                 <td>
                                     <img src="@formatoimg" width="150px" height="200px"></img>
                                 </td>
-                                <td>
+                                <td width="50px">
                                     @Html.DisplayFor(modelitem => item.Id)
                                 </td>
                                 <td>
