--- a/Onbooks_3Ds/Views/Homepage/Index.cshtml
+++ b/Onbooks_3Ds/Views/Homepage/Index.cshtml
@@ -163,14 +163,14 @@
                         </a>
                     </li>
                     <li class="nav-link">
-                        <a asp-controller="Homepage" asp-action="index" >
+                        <a href="#ex1" rel="modal:open">
                             <i class='bx bx-news icon'></i>
                             <span class="text nav-text">Novidades</span>
                         </a>
                     </li>
 
                     <li class="nav-link">
-                        <a asp-controller="Homepage" asp-action="Generos" rel="modal:open">
+                        <a href="#ex2" rel="modal:open">
                             <i class='bx bx-book-open icon'></i>
                             <span class="text nav-text">Gêneros</span>
 
@@ -239,6 +239,7 @@
         <center>
             <div class="page-content">
                 <div class="card">
+
                     <div class="content">
                         <h2 class="title">O Príncipe Cruel</h2>
                         <p class="copy">O primeiro livro da saga: O Povo do Ar</p>
